Added frontend endpoint inside the application.properties